objects/SuMo_Close_Rate__c.object
<CustomObject>
    <description>Used by SuMo to reward on close rate for opportunities</description>
    <fields>
        <fullName>Days_Since_Created__c</fullName>
        <formula>TODAY () - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SuMo_Close_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SuMo Close Rate</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>SuMo Close Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuMo Close Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>